# digitalism_demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  check_db.py  clean_db.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py  migration_helpers.py
alembic/versions/: 20260210_1839_06d3a879a5a1_initial_migration.py  20260210_2127_a1b2c3d4e5f6_populate_regions_departments_from_json.py  20260210_2133_799f57f93b30_add_code_departement_to_department.py
data/: README.md  regions_departments.json
data/csv/: test_cities.csv  test_cities_new.csv
docker/: entrypoint.sh
plans/: city_creation_improvement_proposal.md  city_etl_architecture.md  dockerfile_architecture.md
src/: app.py  config.py  database.py  dependencies.py
src/etl/: README.md  __init__.py  base_component.py  config.py
src/etl/extractors/: __init__.py  base_extractor.py  csv_reader.py
src/etl/loaders/: __init__.py  base_loader.py  city_loader.py
src/etl/scripts/: __init__.py  city_etl_pipeline.py  generate_regions_departments_json.py
src/etl/services/: __init__.py  geo_api.py  geocoding.py
src/etl/transformers/: __init__.py  base_transformer.py  city_transformer.py  department_transformer.py  region_transformer.py
src/model/: __init__.py  base.py  city.py  department.py  region.py
src/repository/: __init__.py  base.py  city.py  department.py  region.py
src/routes/: cities.py  departments.py  regions.py
src/schemas/: __init__.py  base.py  city.py  department.py  region.py  validators.py
src/utils/: __init__.py  date.py
(+4 files in other folders)
