[project]
name = "digitalism-fastapi"
version = "0.1.0"
description = "API FastAPI pour la gestion des régions, départements et villes françaises"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.7",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.13.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
timeout = 60
